--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/sp_boot?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyD
+spring.datasource.url=jdbc:mysql://localhost:3306/new_schema?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyD
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
